src/skiacapi/cpp/skiacapi.h

CAPI unsigned char SkPaintCap_Butt(void);
CAPI unsigned char SkPaintCap_Round(void);
CAPI unsigned char SkPaintCap_Square(void);
CAPI unsigned char SkPaintJoin_Miter(void);
CAPI unsigned char SkPaintJoin_Round(void);
CAPI unsigned char SkPaintJoin_Bevel(void);
CAPI unsigned char SkBlendMode_Clear(void);
CAPI unsigned char SkBlendMode_Src(void);