src/main/java/com/loadingbyte/cinecred/natives/skiacapi/skiacapi_h.java


        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkPaintCap_Butt");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkPaintCap_Butt()
     * }
     */
    public static FunctionDescriptor SkPaintCap_Butt$descriptor() {
        return SkPaintCap_Butt.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkPaintCap_Butt()
     * }
     */
    public static MethodHandle SkPaintCap_Butt$handle() {
        return SkPaintCap_Butt.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkPaintCap_Butt()
     * }
     */
    public static MemorySegment SkPaintCap_Butt$address() {
        return SkPaintCap_Butt.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkPaintCap_Butt()
     * }
     */
    public static byte SkPaintCap_Butt() {
        var mh$ = SkPaintCap_Butt.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkPaintCap_Butt");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkPaintCap_Round {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkPaintCap_Round");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkPaintCap_Round()
     * }
     */
    public static FunctionDescriptor SkPaintCap_Round$descriptor() {
        return SkPaintCap_Round.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkPaintCap_Round()
     * }
     */
    public static MethodHandle SkPaintCap_Round$handle() {
        return SkPaintCap_Round.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkPaintCap_Round()
     * }
     */
    public static MemorySegment SkPaintCap_Round$address() {
        return SkPaintCap_Round.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkPaintCap_Round()
     * }
     */
    public static byte SkPaintCap_Round() {
        var mh$ = SkPaintCap_Round.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkPaintCap_Round");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkPaintCap_Square {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkPaintCap_Square");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkPaintCap_Square()
     * }
     */
    public static FunctionDescriptor SkPaintCap_Square$descriptor() {
        return SkPaintCap_Square.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkPaintCap_Square()
     * }
     */
    public static MethodHandle SkPaintCap_Square$handle() {
        return SkPaintCap_Square.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkPaintCap_Square()
     * }
     */
    public static MemorySegment SkPaintCap_Square$address() {
        return SkPaintCap_Square.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkPaintCap_Square()
     * }
     */
    public static byte SkPaintCap_Square() {
        var mh$ = SkPaintCap_Square.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkPaintCap_Square");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkPaintJoin_Miter {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkPaintJoin_Miter");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkPaintJoin_Miter()
     * }
     */
    public static FunctionDescriptor SkPaintJoin_Miter$descriptor() {
        return SkPaintJoin_Miter.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkPaintJoin_Miter()
     * }
     */
    public static MethodHandle SkPaintJoin_Miter$handle() {
        return SkPaintJoin_Miter.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkPaintJoin_Miter()
     * }
     */
    public static MemorySegment SkPaintJoin_Miter$address() {
        return SkPaintJoin_Miter.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkPaintJoin_Miter()
     * }
     */
    public static byte SkPaintJoin_Miter() {
        var mh$ = SkPaintJoin_Miter.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkPaintJoin_Miter");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkPaintJoin_Round {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkPaintJoin_Round");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkPaintJoin_Round()
     * }
     */
    public static FunctionDescriptor SkPaintJoin_Round$descriptor() {
        return SkPaintJoin_Round.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkPaintJoin_Round()
     * }
     */
    public static MethodHandle SkPaintJoin_Round$handle() {
        return SkPaintJoin_Round.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkPaintJoin_Round()
     * }
     */
    public static MemorySegment SkPaintJoin_Round$address() {
        return SkPaintJoin_Round.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkPaintJoin_Round()
     * }
     */
    public static byte SkPaintJoin_Round() {
        var mh$ = SkPaintJoin_Round.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkPaintJoin_Round");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkPaintJoin_Bevel {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkPaintJoin_Bevel");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkPaintJoin_Bevel()
     * }
     */
    public static FunctionDescriptor SkPaintJoin_Bevel$descriptor() {
        return SkPaintJoin_Bevel.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkPaintJoin_Bevel()
     * }
     */
    public static MethodHandle SkPaintJoin_Bevel$handle() {
        return SkPaintJoin_Bevel.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkPaintJoin_Bevel()
     * }
     */
    public static MemorySegment SkPaintJoin_Bevel$address() {
        return SkPaintJoin_Bevel.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkPaintJoin_Bevel()
     * }
     */
    public static byte SkPaintJoin_Bevel() {
        var mh$ = SkPaintJoin_Bevel.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkPaintJoin_Bevel");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkBlendMode_Clear {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkBlendMode_Clear");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Clear()
     * }
     */
    public static FunctionDescriptor SkBlendMode_Clear$descriptor() {
        return SkBlendMode_Clear.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Clear()
     * }
     */
    public static MethodHandle SkBlendMode_Clear$handle() {
        return SkBlendMode_Clear.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Clear()
     * }
     */
    public static MemorySegment SkBlendMode_Clear$address() {
        return SkBlendMode_Clear.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Clear()
     * }
     */
    public static byte SkBlendMode_Clear() {
        var mh$ = SkBlendMode_Clear.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkBlendMode_Clear");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkBlendMode_Src {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkBlendMode_Src");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Src()
     * }
     */
    public static FunctionDescriptor SkBlendMode_Src$descriptor() {
        return SkBlendMode_Src.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Src()
     * }
     */
    public static MethodHandle SkBlendMode_Src$handle() {
        return SkBlendMode_Src.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkBlendMode_Src()
     * }
     */
    public static MemorySegment SkBlendMode_Src$address() {
        return SkBlendMode_Src.ADDR;
    }
